src/objects/APXT_CongaSign__Recipient__c.object
<CustomObject>
    <description>Replication of Recipient of a Conga Sign Transaction</description>
    <fields>
        <fullName>APXT_CongaSign__Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__DeclineReason__c</fullName>
        <label>Decline Reason</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Initials__c</fullName>
        <label>Initials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__RecipientName__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__SignedOn__c</fullName>
        <label>Signed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__SignerIndex__c</fullName>
        <label>Signer Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PENDING</fullName>
                </value>
                <value>
                    <fullName>SENT</fullName>
                </value>
                <value>
                    <fullName>COMPLETE</fullName>
                </value>
                <value>
                    <fullName>DECLINED</fullName>
                </value>
                <value>
                    <fullName>CANCELLED</fullName>
                </value>
                <value>
                    <fullName>EXPIRED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__Transaction__c</fullName>
        <label>Conga Sign Transaction</label>
        <referenceTo>APXT_CongaSign__Transaction__c</referenceTo>
        <relationshipLabel>Recipients</relationshipLabel>
        <relationshipName>Recipients</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APXT_CongaSign__UUID__c</fullName>
        <externalId>true</externalId>
        <label>UUID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Conga Sign Recipient</label>
    <nameField>
        <displayFormat>CSR-{00000}</displayFormat>
        <label>Recipient Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conga Sign Recipients</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>APXT_CongaSign__Prevent_Reparent</fullName>
        <active>true</active>
        <description>Prevent actual reparenting of records despite allowing for API upsert.</description>
        <errorConditionFormula>ISCHANGED(APXT_CongaSign__Transaction__c)</errorConditionFormula>
        <errorMessage>You cannot Reparent this record.</errorMessage>
    </validationRules>
</CustomObject>